fix the grid containers on home and track pages overflowing their boundaries horizontally

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 .container {
     width: 1280px;
     display: grid;
-    grid-template-columns: 635px 635px;
+    grid-template-columns: 50% 50%;
     grid-gap: 10px;
     margin: 10px auto 10px auto;
 }
